# GD-Widgets-Extension

./: 9_PushReleaseToGDDev.bat  CMakeLists.txt  README.md
TextBoxObject/: CMakeLists.txt  CMakeLists.txt~  Extension.cpp  TextBox.cpp  TextBox.h  TextBoxObject.cpp  TextBoxObject.h  TextBoxObjectEditor.cpp  TextBoxObjectEditor.h  TextBoxObjectExtension.cbp  TextBoxObjectExtension.layout
TextBoxObject/wxsmith/: TextBoxObjectEditor.wxs
Translations/fr_FR/: TextBoxObject.mo  TextBoxObject.po
WidgetsCore/: CMakeLists.txt  CMakeLists.txt~  WidgetsCore.cbp  WidgetsCore.layout
WidgetsCore/include/WidgetsCore/: CameraTools.h  ColorTools.h  Defs.h  Palette.h  PaletteEditor.h  PaletteSerialization.h  TextBox.h  Widget.h
WidgetsCore/src/: CameraTools.cpp  ColorTools.cpp  Palette.cpp  PaletteEditor.cpp  PaletteSerialization.cpp  TextBox.cpp  Widget.cpp
WidgetsCore/wxsmith/: PaletteEditor.wxs
